--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tab-panel",
+  "name": "@webcomponent/tab-panel",
   "version": "0.0.1",
   "description": "A tab panel web component",
   "repository": {
@@ -15,18 +15,21 @@
   "author": "swiing",
   "license": "ISC",
   "scripts": {
-    "lint": "eslint src/**/*.js",
-    "style": "prettier src/**/*.js --write",
-    "style:check": "prettier src/**/*.js --check"
+    "lint": "eslint src/**/*.ts",
+    "style": "prettier src/**/*.ts --write",
+    "style:check": "prettier src/**/*.ts --check"
   },
   "directories": {
     "example": "./example",
     "src": "./src"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
     "eslint": "8.5.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "typescript": "^4.5.4"
   }
 }
