--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webcomponent/tab-panel",
+  "name": "tab-panel",
   "version": "0.0.1",
   "description": "A tab panel web component",
   "repository": {
@@ -34,6 +34,8 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.5.1",
+    "rollup": "^2.64.0",
+    "rollup-plugin-import-assert": "^2.1.0",
     "typescript": "^4.5.4"
   }
 }
