build: add a build script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/swiing/tab-panel.git"
   },
   "type": "module",
-  "module": "out/tab-panel.js",
+  "module": "dist/tab-panel.js",
   "typings": "out/tab-panel.d.ts",
   "keywords": [
     "tab panel",
@@ -18,7 +18,7 @@
   "author": "swiing",
   "license": "ISC",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc -p . && rollup -c",
     "lint": "eslint src/**/*.ts",
     "style": "prettier src/**/*.ts --write",
     "style:check": "prettier src/**/*.ts --check"
